# squoosh-dev

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: desktop.yml
electron/: main.js
lib/: local-static-server.js
scripts/: portable.js
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/client/initial-app/App/: index.tsx  style.css
src/client/lazy-app/Batch/: index.tsx  style.css
src/client/lazy-app/Compress/: index.tsx  style.css
src/client/lazy-app/Compress/Options/Select/: style.css
src/client/lazy-app/Compress/Results/: index.tsx
src/client/lazy-app/util/: index.ts
